--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
+    "electron": "^10.1.3",
     "follow-redirects": "^1.11.0",
     "immer": "^7.0.5",
     "joplin-turndown": "^4.0.29",
